@@ -34,19 +34,15 @@ following steps explain the differences.
 <itemizedlist>
 <listitem><para>
 
-Boot the installer with <userinput>modules=ppp-udeb</userinput> as boot
-parameter. This means that at the boot prompt you should enter:
+Boot the installer with the boot parameter
+<userinput>modules=ppp-udeb</userinput><footnote arch="x86">
 
-<informalexample><screen>
-install modules=ppp-udeb
-</screen></informalexample>
+<para>
+See <xref linkend="boot-screen"/> for information on
+how to add a boot parameter.
+</para>
 
-or, if you prefer using the graphical installer:
-
-<informalexample><screen>
-installgui modules=ppp-udeb
-</screen></informalexample>
-
+</footnote>.
 This will ensure the component responsible for the setup of PPPoE
 (<classname>ppp-udeb</classname>) will be loaded and run automatically.
 
