@@ -9,8 +9,9 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   [ Frans Pop ]
   * Document preseeding of network-console now that its postinst can be
     relied on to be executed.
+  * Update info on passing boot parameter for PPPoE.
 
- -- Frans Pop <fjp@debian.org>  Sat, 27 Dec 2008 06:52:19 +0100
+ -- Frans Pop <fjp@debian.org>  Fri, 16 Jan 2009 18:07:04 +0100
 
 installation-guide (20081208) unstable; urgency=low
 
